--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,8 @@ body {
 
 nav {
   display: block;
-    width: 100%;
     margin-left: 20px;
     margin-top: 30px;
-}
-
-.img-youtube-logo  {
-  width :80px;
-  height :90px;
-  
 }
 
 .img-logo {
@@ -20,20 +13,19 @@ nav {
   height: 40px;
 }
 
-
-img-youtube-logo {
-  height: 50px;
-  width:50px;
-} 
-
 .navigation-icon {
     display: flex;
     flex-direction: row;  
 }
 
+.img-youtube-logo {
+  width:50px;
+  height:50px;
+
+}
 .searchbox-size {
     width: 45%;
-    margin-left: 20px;
+    margin-left: 90px;
 }
 
 .searchbox-pad {
@@ -85,7 +77,7 @@ form.example input[type=text] {
   }
 
   .video-icon {
-    margin-left: 300px;
+    margin-left: 250px;
   }
   .apps-icon{
     margin-left :20px;
@@ -107,33 +99,24 @@ form.example input[type=text] {
   }
   
   .yt-video-left{
-    flex-grow: 3;
+    /* flex-grow: 3; */
     display: flex;
     flex-direction: column;
     margin-left: 20px;
   }
-  .container .yt-videos-picture {
-    display: flex;
-    flex-direction: column;
-    margin-right: 10%;
-    
-    /* width : 200px; */
-  }
   
-
-  .yt-videos-picture img {
+  .yt-videos-picture  {
+    display: flex;
+flex-direction: column;
     margin-bottom: 20px;
     height: 100px;
-    width : 150px;
-  }
-
-  .container .yt-video-left .container-1 {
-    display : flex;
+    /* width : 150px; */
+    margin-left: 50px;
   }
 
   .thumb-up{
     margin-top: 10px;
-    margin-left: 300px;
+    margin-left: 780px;
   }
   .thumb-down{
     margin-top: 10px;
@@ -145,4 +128,41 @@ form.example input[type=text] {
     margin-left: 20px;
   }
 
+  .profile-img {
+height:40px;
+  }
+  .subscribe-btn {
+    background-color: red;
+    opacity: 0.9;
+    border-radius: 5px;
+  }
+
   
+  .subscribe {
+    display: inline-flex;
+  }
+
+  .viewer {
+    margin-left: 650px;
+  }
+  .paragraph {
+    flex-wrap: wrap;
+    width:900px
+  }
+
+  .img-class {
+    width: 150px;
+    height: 120px;
+  }
+
+  .side-pic {
+    display:flex;
+  }
+
+   .para {
+    margin-left: 10px;
+  }
+  .side-row {
+    display: flex;
+    flex-direction: column;
+  }
